@@ -1,7 +1,7 @@
 Source: globus-gridftp-server
 Priority: optional
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Build-Depends: debhelper (>= 5), autotools-dev, quilt, libglobus-gridftp-server-control-dev (>= 2), libglobus-usage-dev (>= 3), libglobus-xio-gsi-driver-dev (>= 2), libglobus-xio-dev (>= 3), libglobus-authz-dev (>= 2), libglobus-gfork-dev (>= 3), libglobus-ftp-control-dev (>= 4), libglobus-gssapi-gsi-dev (>= 11), libglobus-gss-assist-dev (>= 9), libglobus-common-dev (>= 14), globus-common-progs (>= 14), libglobus-gsi-credential-dev (>= 6), pkg-config, libltdl-dev
+Build-Depends: debhelper (>= 5), autotools-dev, quilt, libglobus-gridftp-server-control-dev (>= 2), libglobus-usage-dev (>= 3), libglobus-xio-gsi-driver-dev (>= 2), libglobus-xio-dev (>= 3), libglobus-authz-dev (>= 2), libglobus-gfork-dev (>= 3), libglobus-ftp-control-dev (>= 4), libglobus-gssapi-gsi-dev (>= 11), libglobus-gss-assist-dev (>= 9), libglobus-common-dev (>= 14), globus-common-progs (>= >= 14), libglobus-gsi-credential-dev (>= 6), pkg-config, libltdl-dev
 Standards-Version: 3.9.0
 Section: net
 DM-Upload-Allowed: yes
