@@ -1,3 +1,9 @@
+globus-gridftp-server (7.7-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Thu, 24 Apr 2014 13:23:57 -0400
+
 globus-gridftp-server (7.6-2+gt6.@distro@) @distro@; urgency=low
 
   * libltdl-dev dependency
